--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,8 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p><b><i>This site was created by Vamika. It is created using nodejs. It uses data from mapbox.com and weatherstack.com
+!</i></b></p>
             <img class="portrait" src="/img/13624447-Hand-pointing-at-a-Web-Development-illustration-on-blue-background--Stock-Illustration.jpg">
         </div>
         
